# presentations

allocator.12.06.17/: CMakeLists.txt  CmakeFlags.txt  setup.sh
allocator.12.06.17/docs/: allocator_presentation_outline.txt
allocator.12.06.17/src/: CMakeLists.txt  generic_counting_allocator.hpp  skeleton_allocator.hpp
allocator.12.06.17/test/: CMakeLists.txt  counting_allocator_test.cpp  demo.cpp  skeleton_allocator_test.cpp
async.10.11.17/: .clang-format  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  block.hpp  block_factory.hpp  demo.cpp  run.sh  setup.sh
cmake.03.14.18/: .gitignore  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  compile.sh  presentation.txt  setup.sh
cmake.03.14.18/CmakeModules/: AddCxxExecutable.cmake  FindLeptonica.cmake  FindTesseract.cmake
cmake.03.14.18/calc/: CMakeLists.txt  main.cpp
cmake.03.14.18/myproject/: CMakeLists.txt
cmake.03.14.18/myproject/src/: counting_allocator.hpp  helpers.hpp
cmake.03.14.18/myproject/test/: CMakeLists.txt  generic_counting_allocator_test.cpp  skeleton_allocator_test.cpp
cmake.03.14.18/ocr/: CMakeLists.txt
cmake.03.14.18/ocr/test/: CMakeLists.txt  tesseract_test.cpp
cmake.03.14.18/slowmath/: CMakeLists.txt
cmake.03.14.18/slowmath/src/: operations.cpp  operations.hpp
cmake.03.14.18/slowmath/test/: CMakeLists.txt  add_test.cpp
cmake.03.14.18/syntax-demo/: README  control.cmake  demo_control.sh  demo_functions_macros.sh  demo_loops.sh  demo_vars_io.sh  functions_macros.cmake  loops.cmake  variables.cmake  vars_io.cmake
